test/e2e/app-dir/segment-cache/prefetch-runtime/app/(default)/errors/error-after-cookies/page.tsx
import { cookies } from 'next/headers'
import { Suspense } from 'react'
import { cachedDelay, DebugRenderKind } from '../../../shared'
import { ErrorBoundary } from '../../../../components/error-boundary'

export const unstable_instant = {
  prefetch: 'runtime',
  // We're intentionally testing error behavior at runtime.
  // Build-time validation catches it and prevents that.
  unstable_disableValidation: true,
  samples: [{ cookies: [{ name: 'user-agent', value: null }] }],
}
export const unstable_prefetch = 'runtime'

export default async function Page() {
  return (
    <main>
      <DebugRenderKind />
      <p id="intro">
        This page errors after a cookies call, so we should only see the error
        in a runtime prefetch or a navigation (and not during prerendering /
        prefetching)
      </p>
      <Suspense fallback={<div style={{ color: 'grey' }}>Loading 1...</div>}>
        <ErrorBoundary>
          <One />
        </ErrorBoundary>
      </Suspense>
    </main>
  )
}

async function One(): Promise<never> {
  const cookieStore = await cookies()
  await cachedDelay(['/cookies', cookieStore.get('user-agent')?.value])
  throw new Error('Kaboom')
}
